fixed login spacing and index page

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7,7 +7,7 @@
 }
 
 .auth {
-    background-color: bisque;
+    background-color: honeydew;
     background-image: url("images/login_page_background.jpg");
     background-size: cover;
     margin: 0;
